[package]
name = "task_kit"
description = "Task Kit is a Rust crate that makes it easy to build asynchronous and concurrent systems."
version = "0.2.0"
authors = ["Robert Hurst <robertwhurst@gmail.com>"]
license = "MIT"

[dependencies]
num_cpus = "1.0"
rand = "0.3"
futures = { version = "0.1", optional = true }

[dev-dependencies]
tokio-timer = "0.1"


[features]
futures_support = ["futures"]